<resources>
    <string name="new_task">New Task</string>
    <string name="hi">HI</string>
    <string name="add_task">add task</string>
    <string name="let_s_manage_your_tasks">Lets manage your tasks</string>
    <string name="write_memo">Write memo</string>
    <string name="save_memo">Save memo</string>
    <string name="write_promise">Write promise</string>
    <string name="save_affirmation">Save affirmation</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="task_date">Task Date</string>
    <string name="task_time">Task Time</string>
    <string name="task_event">Add an Event</string>
    <string name="task_status">Task status</string>
    <string name="done">Done</string>
    <string name="save_task">Save task</string>
    <string name="WriteDiary">Write your diary entry here…</string>
    <string name="Write_promise">Write your promise here</string>
    <string name="SaveDiary">Save Diary Entry</string>
    <string name="TaskTitle">Task Title</string>
    <string name="TaskTime">Task Time</string>
    <string name="cancel">Cancel</string>
    <string name="NewTask">NEW TASK</string>
    <string name="Finish">Done</string>
    <string name="EnterTaskTitle">Enter task title</string>
    <string name="EnterTaskDescription">Enter task description</string>
    <string name="tags">Tags</string>
    <string name="ChooseDate">Choose Date</string>
    <string name="Sentence">Today was a good day!</string>
    <string name="TaskDescription">Task Description</string>
    <string name="TaskStatus">Task Status</string>
    <string name="monday_nov_27">Monday, Nov 27</string>
    <string name="todo">To do</string>
    <string name="write_your_diary_entry_here">Write your diary entry here</string>
    <string name="save_entry">save_entry</string>
</resources>