<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="30dp"
        android:paddingBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/new_task"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/let_s_manage_your_tasks"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:alpha="0.8"
            android:textSize="18sp" />

        <TextView
            android:layout_marginStart="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/task_title"
            android:labelFor="@id/addTaskTitle" />

        <EditText
            android:id="@+id/addTaskTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autofillHints="title"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="14sp"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:layout_marginStart="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/task_description"
            android:labelFor="@id/addTaskDescription" />

        <EditText
            android:id="@+id/addTaskDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autofillHints="description"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="14sp"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:layout_marginStart="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/task_date"
            android:labelFor="@id/taskDate" />

        <EditText
            android:id="@+id/taskDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autofillHints="date"
            android:inputType="date"
            android:minHeight="48dp"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="14sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:layout_marginStart="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/task_time"
            android:labelFor="@id/taskTime" /> <!-- accessibility label 추가 -->

        <EditText
            android:id="@+id/taskTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autofillHints="time"
            android:inputType="time"
            android:minHeight="48dp"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="14sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:layout_marginStart="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/task_event"
            android:labelFor="@id/taskEvent" />

        <EditText
            android:id="@+id/taskEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:autofillHints="event"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="14sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addTask"
            android:text="@string/done"
            android:layout_marginTop="5dp" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="3dp"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:background="transparent"/>

    </LinearLayout>
</ScrollView>