<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#040529"
        android:padding="16dp">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@android:color/transparent"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp" />

        <!-- new task page title -->
        <TextView
            android:id="@+id/page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NewTask"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_alignBaseline="@id/cancel_button"
            android:layout_alignTop="@id/cancel_button" />

        <!-- Done -->
        <Button
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Finish"
            android:background="@android:color/transparent"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:layout_alignParentEnd="true"
            android:layout_alignBaseline="@id/cancel_button"
            android:layout_alignTop="@id/cancel_button"
            tools:ignore="RelativeOverlap" />

        <EditText
            android:id="@+id/task_title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/page_title"
            android:layout_marginTop="30dp"
            android:autofillHints=""
            android:background="@android:color/darker_gray"
            android:hint="@string/EnterTaskTitle"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#4E342E"
            android:textSize="16sp" />

        <!-- task description -->
        <EditText
            android:id="@+id/task_description_input"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/task_title_input"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@android:color/darker_gray"
            android:gravity="top"
            android:hint="@string/EnterTaskDescription"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#4E342E"
            android:textSize="16sp" />

        <!-- Spinner for tags -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/task_description_input"
            android:layout_marginTop="10dp"
            android:text="@string/tags"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/task_tags_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/task_description_input"
            android:layout_marginTop="40dp"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/tags"
            android:dropDownVerticalOffset="10dp"
            android:minHeight="48dp"
            android:padding="12dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <!-- choose date and time -->
        <Button
            android:id="@+id/choose_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/task_tags_spinner"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray"
            android:text="@string/ChooseDate"
            android:textColor="#FFFFF1"
            tools:ignore="TextContrastCheck" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>